plugins {
    id 'java'
}

group = 'com.ignore.plugin'
version = '2025.1'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

jar {
    archiveFileName.set("2025.1-1.21.5-Forge.jar")
    manifest {
        attributes(
                'Implementation-Title': '1.21.5 Forge Generator',
                'Implementation-Version': 2025.1
        )
    }
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn jar

    environment("MCREATOR_PLUGINS_FOLDER", file("$buildDir/libs").absolutePath)
    environment("MCREATOR_PLUGINS_DEV", "true")

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = files(
            "C:/Program Files/Pylo/MCreator/MCreator.jar",
            "$buildDir/libs/${jar.archiveFileName.get()}"
    )

    mainClass.set('net.mcreator.Launcher')
    workingDir = file("C:/Program Files/Pylo/MCreator")
}

subprojects { subproject ->
    subproject.plugins.withType(JavaPlugin).configureEach {
        tasks.withType(Test).configureEach {
            dependsOn rootProject.tasks.named('jar')

            environment("MCREATOR_PLUGINS_FOLDER", new File(rootProject.projectDir, "/build/libs"))
            environment("MCREATOR_PLUGINS_DEV", "true")

            workingDir = file("C:/Program Files/Pylo/MCreator")
        }
    }
}
